[package]
name = "pki"
description = "A simple PKI management tool for smalls deployments used for testing"
version = "0.1.0"
authors = ["Pablo Barrientos <pablo.barrientos.13@gmail.com>"]
edition = "2018"
repository = "https://github.com/PBarri/pki"
license = "MIT"
keywords = ["pki", "security"]
categories = ["command-line-utilities"]

# False while in development
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
resource = "~0.4.0"
log = "0.4"


[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"